--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
@@ -6,9 +6,6 @@
              BackgroundColor="White"
              IsEnabled="{Binding IsBusy, Converter= {StaticResource reverseBoolean}}"
              NavigationPage.HasBackButton="True">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Kaydet" Command="{Binding SaveClicked}" />
-    </ContentPage.ToolbarItems>
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="LableStyle" TargetType="Label">
@@ -21,19 +18,21 @@
     </ContentPage.Resources>
     <ScrollView>
         <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
-            <Image Source="logo.png" BackgroundColor="White" HorizontalOptions="Center" VerticalOptions="Center" />
-
-            <Grid RowSpacing="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <!--  row background colors  -->
-
-                <!--  inner grid for button layouts  -->
-                <Grid Grid.Row="0" ColumnSpacing="2" BackgroundColor="White" HorizontalOptions="FillAndExpand" RowSpacing="1" VerticalOptions="FillAndExpand" Padding="20,40">
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="30*" />
+                        <ColumnDefinition Width="70*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Row="0" Grid.Column="0" Source="{Binding EventIcon}" BackgroundColor="White" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="White" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+                </Grid>
+            </StackLayout>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" RowSpacing="10" VerticalOptions="Fill" Margin="0,10,30,10">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
@@ -42,14 +41,14 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="40" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="15*" />
+                        <ColumnDefinition Width="28*" />
+                        <ColumnDefinition Width="57*" />
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Row="0" Grid.Column="0" Source="subjectIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="0, 10" />
+                    <Image Grid.Row="0" Grid.Column="0" Source="subjectIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" />
                     <Label Grid.Row="0" Grid.Column="1" Style="{StaticResource LableStyle}" Text="Konu" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand">
                         <Label.Effects>
-                            <controls:ShadowEffect Radius="5" DistanceX="5" DistanceY="5" Color="Black">
+                            <controls:ShadowEffect Radius="5" DistanceX="5" DistanceY="3" Color="Black">
                             </controls:ShadowEffect>
                         </Label.Effects>
                     </Label>
@@ -62,7 +61,7 @@
                                                BackgroundColor="White"
                                                IsEnabled="{Binding IsEnabledEvent}"
                                                HorizontalOptions="FillAndExpand"
-                                               VerticalOptions="CenterAndExpand">
+                                               VerticalOptions="Fill">
                     </controls:BorderlessPicker>
 
                     <Image Grid.Row="1" Grid.Column="0" Source="eventIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" />
@@ -81,7 +80,7 @@
                                                BackgroundColor="White"
                                                HorizontalOptions="FillAndExpand"
                                                IsEnabled="{Binding IsEnabledEvent}"
-                                               VerticalOptions="CenterAndExpand">
+                                               VerticalOptions="Fill">
                     </controls:BorderlessPicker>
 
                     <Image Grid.Row="2" Grid.Column="0" Source="sourceIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" />
@@ -99,7 +98,7 @@
                                                HorizontalOptions="FillAndExpand"
                                                SelectedItem="{Binding SelectedSource,Mode=TwoWay}"
                                                AutomationProperties.HelpText="Seçiniz"
-                                               VerticalOptions="CenterAndExpand">
+                                               VerticalOptions="Fill">
                     </controls:BorderlessPicker>
 
                     <Image Grid.Row="3" Grid.Column="0" Source="locationIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" />
@@ -117,7 +116,7 @@
                                                SelectedItem="{Binding SelectedLocation,Mode=TwoWay}"
                                                HorizontalOptions="FillAndExpand"
                                                AutomationProperties.HelpText="Seçiniz"
-                                               VerticalOptions="CenterAndExpand">
+                                               VerticalOptions="Fill">
                     </controls:BorderlessPicker>
 
                     <Image Grid.Row="4" Grid.Column="0" Source="impactAreaIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" />
@@ -135,12 +134,11 @@
                                                SelectedItem="{Binding SelectedImpactArea,Mode=TwoWay}"
                                                HorizontalOptions="FillAndExpand"
                                                AutomationProperties.HelpText="Seçiniz"
-                                               VerticalOptions="CenterAndExpand">
+                                               VerticalOptions="Fill">
                     </controls:BorderlessPicker>
                 </Grid>
-            </Grid>
-
-            <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+            </StackLayout>
+            <Grid ColumnSpacing="1" HorizontalOptions="FillAndExpand" VerticalOptions="Fill" Margin="0,10,0,5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
@@ -148,16 +146,28 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" Grid.Column="0" Image="gallery.png" BackgroundColor="White" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" Command="{Binding UploadPhotoClicked}" />
-                <Button Grid.Row="0" Grid.Column="1" Image="camera.png" BackgroundColor="White" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand" Command="{Binding TakePhotoClicked}" />
+                <Button Grid.Row="0" Grid.Column="0" Image="gallery.png" BackgroundColor="White" HorizontalOptions="EndAndExpand" VerticalOptions="FillAndExpand" Command="{Binding UploadPhotoClicked}" />
+                <Button Grid.Row="0" Grid.Column="1" Image="camera.png" BackgroundColor="White" HorizontalOptions="StartAndExpand" VerticalOptions="FillAndExpand" Command="{Binding TakePhotoClicked}" />
             </Grid>
-
-            <ActivityIndicator
-                            x:Name="Progress"
-                            Color="{StaticResource NavigationPrimary}"
-                            IsEnabled="{Binding IsBusy}"
-                            IsVisible="{Binding IsBusy}"
-                            IsRunning="{Binding IsBusy}"></ActivityIndicator>
+            <StackLayout>
+                <ActivityIndicator x:Name="Progress"
+                                   Color="{StaticResource NavigationPrimary}"
+                                   IsEnabled="{Binding IsBusy}"
+                                   IsVisible="{Binding IsBusy}"
+                                   IsRunning="{Binding IsBusy}"></ActivityIndicator>
+            </StackLayout>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                <Button CornerRadius="7"
+                        FontSize="Large"
+                        TextColor="White"
+                        BackgroundColor="#00a9ab"
+                        FlexLayout.AlignSelf="Stretch"
+                        HorizontalOptions="FillAndExpand"
+						VerticalOptions="EndAndExpand"
+						Text="Başlat"
+                        Margin="3,5,3,50"
+                        Command="{Binding SaveClicked}" />
+            </StackLayout>
         </StackLayout>
     </ScrollView>
 </ContentPage>
