Combobox guncellemesi yapildi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
@@ -49,10 +49,11 @@
 							HorizontalOptions="Center"
                             Margin="0,3,0,0" />
                     <Label Style="{StaticResource LableStyle}" Text="Konu" Margin="0, 0, 57, 0" />
-                    <controls:BorderlessPicker  ItemsSource="{Binding SubjectCombobox}" ItemDisplayBinding="{Binding Name}"
+                    
+                    <controls:BorderlessPicker  ItemsSource="{Binding SubjectCombobox}" ItemDisplayBinding="{Binding Name}" 
                                                    Title="Seçiniz" AutomationProperties.HelpText="Seçiniz" SelectedItem="{Binding SelectedSubject,Mode=TwoWay}"
-                                                    BackgroundColor="White" Margin="3,0,3,8" HorizontalOptions="FillAndExpand"  VerticalOptions="Center">
-                    </controls:BorderlessPicker>
+                                                    Margin="3,0,3,8" HorizontalOptions="FillAndExpand"  VerticalOptions="Center">
+                     </controls:BorderlessPicker>
                 </StackLayout>
                 <StackLayout Orientation="Horizontal">
                     <Image
