--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioListPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioListPage.xaml
@@ -11,14 +11,14 @@
         <ResourceDictionary>
             <DataTemplate x:Key="evenTemplate">
                 <ViewCell>
-                    <Frame BackgroundColor="White" CornerRadius="10" HasShadow="True" OutlineColor="#dcdcdc">
+                    <Frame BackgroundColor="White" CornerRadius="15" HasShadow="True" OutlineColor="#dcdcdc">
                         <local:ScenarioTemplate />
                     </Frame>
                 </ViewCell>
             </DataTemplate>
             <DataTemplate x:Key="unevenTemplate">
                 <ViewCell>
-                    <Frame BackgroundColor="#eeeeee" CornerRadius="10" HasShadow="True" OutlineColor="#dcdcdc">
+                    <Frame BackgroundColor="#eeeeee" CornerRadius="15" HasShadow="True" OutlineColor="#dcdcdc">
                         <local:ScenarioTemplate />
                     </Frame>
                 </ViewCell>
@@ -30,10 +30,22 @@
     </TabbedPage.Resources>
     <TabbedPage.Children>
         <ContentPage Title="Bekleyenler" x:Name="Waiting">
-            <StackLayout>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill" Margin="8,8">
+                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40*" />
+                        <ColumnDefinition Width="60*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+                </Grid>
                 <ListView x:Name="WaitingScenarioListView"
                               ItemsSource="{Binding ScenarioItems}"
                               VerticalOptions="FillAndExpand"
+                              HorizontalOptions="FillAndExpand"
                               HasUnevenRows="true"
                               RefreshCommand="{Binding LoadScenariosCommand}"
                               IsPullToRefreshEnabled="true"
@@ -45,10 +57,22 @@
             </StackLayout>
         </ContentPage>
         <ContentPage Title="Onaylananlar" x:Name="ApprovedFilter">
-            <StackLayout>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill" Margin="8,8">
+                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40*" />
+                        <ColumnDefinition Width="60*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+                </Grid>
                 <ListView x:Name="ApprovedScenarioListView"
                               ItemsSource="{Binding ScenarioItems}"
                               VerticalOptions="FillAndExpand"
+                              HorizontalOptions="FillAndExpand"
                               HasUnevenRows="true"
                               ItemAppearing="ApprovedListView_ItemAppearing"
                               RefreshCommand="{Binding LoadScenariosCommand}"
@@ -67,10 +91,22 @@
             </StackLayout>
         </ContentPage>
         <ContentPage Title="Reddedilenler" x:Name="RejectedFilter">
-            <StackLayout>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill" Margin="8,8">
+                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40*" />
+                        <ColumnDefinition Width="60*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Row="0" Grid.Column="0" Source="adkDetail.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+                </Grid>
                 <ListView x:Name="RejectedScenarioListView"
                               ItemsSource="{Binding ScenarioItems}"
                               VerticalOptions="FillAndExpand"
+                              HorizontalOptions="FillAndExpand"
                               ItemAppearing="RejectedListView_ItemAppearing"
                               HasUnevenRows="true"
                               RefreshCommand="{Binding LoadScenariosCommand}"
