--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/TaskDetailPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/TaskDetailPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:converters="clr-namespace:Intouch.Edm.Converters"
+             xmlns:controls="clr-namespace:Intouch.Edm.Controls"
              x:Class="Intouch.Edm.Views.TaskDetailPage"
              NavigationPage.HasNavigationBar="true">
     <ContentPage.ToolbarItems>
@@ -18,107 +18,124 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ScrollView>
-        <Grid
-				RowSpacing="0"
-				Padding="20">
-            <Grid.RowDefinitions>
-                <RowDefinition
-						Height="*" />
-                <RowDefinition
-						Height="Auto" />
-            </Grid.RowDefinitions>
-
-            <!-- FIELD CONTAINERS -->
-            <StackLayout
-					Spacing="20">
-                <StackLayout Orientation="Horizontal">
-                    <Image
-                            Source="subjectIcon.png"
-							VerticalOptions="Center"
-							HorizontalOptions="Center"
-                            Margin="0,3,0,0" />
-                    <Label Style="{StaticResource LableStyle}" Text="Konu" Margin="0, 0, 57, 0" />
-                    <Label x:Name="Subject"
+        <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Orientation="Vertical">
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="40*" />
+                        <ColumnDefinition Width="60*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Row="0" Grid.Column="0" Source="taskDetailIcon.png" BackgroundColor="Transparent" HorizontalOptions="End" VerticalOptions="End" Margin="0,5,0,5" />
+                    <Image Grid.Row="0" Grid.Column="1" Source="scenarioDetailLogo.png" BackgroundColor="Transparent" HorizontalOptions="Start" VerticalOptions="Center" Margin="0,5,0,5" />
+                </Grid>
+            </StackLayout>
+            <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+                <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" RowSpacing="10" VerticalOptions="Fill" Margin="0,10,30,10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="15*" />
+                        <ColumnDefinition Width="28*" />
+                        <ColumnDefinition Width="57*" />
+                    </Grid.ColumnDefinitions>
+                    <Image Grid.Row="0" Grid.Column="0" Source="subjectIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" />
+                    <Label Grid.Row="0" Grid.Column="1" Style="{StaticResource LableStyle}" Text="Konu" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand">
+                        <Label.Effects>
+                            <controls:ShadowEffect Radius="5" DistanceX="5" DistanceY="3" Color="Black">
+                            </controls:ShadowEffect>
+                        </Label.Effects>
+                    </Label>
+                    <Label Grid.Row="0" Grid.Column="2"
                            Text="{Binding Task.Scenario.Subject}"
                            HorizontalTextAlignment="Center"
                            VerticalTextAlignment="Center"
+                           TextColor="Black"
                            FontSize="Medium"
                            HorizontalOptions="FillAndExpand"
-                           VerticalOptions="Center" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image
-                            Source="eventIcon.png"
-							VerticalOptions="Center"
-							HorizontalOptions="Center"
-                            Margin="0,3,0,0" />
-                    <Label Style="{StaticResource LableStyle}" Text="Olay" Margin="0, 0, 63, 0"></Label>
-                    <Label x:Name="Event"
+                           VerticalOptions="FillAndExpand">
+                    </Label>
+
+                    <Image Grid.Row="1" Grid.Column="0" Source="eventIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="0,7,0,0" />
+                    <Label Grid.Row="1" Grid.Column="1" Style="{StaticResource LableStyle}" Text="Olay" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" Margin="0,7,0,0">
+                        <Label.Effects>
+                            <controls:ShadowEffect Radius="5" DistanceX="5" DistanceY="5" Color="Black">
+                            </controls:ShadowEffect>
+                        </Label.Effects>
+                    </Label>
+                    <Label Grid.Row="1" Grid.Column="2"
                            Text="{Binding Task.Scenario.Event}"
                            HorizontalTextAlignment="Center"
                            VerticalTextAlignment="Center"
+                           Margin="0,7,0,0"
                            FontSize="Medium"
+                           TextColor="Black"
                            HorizontalOptions="FillAndExpand"
-                           VerticalOptions="Center" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image
-                            Source="sourceIcon.png"
-							VerticalOptions="Center"
-							HorizontalOptions="Center"
-                            Margin="0,3,0,0" />
-                    <Label Style="{StaticResource LableStyle}" Text="Kaynak" Margin="0, 0, 33, 0"></Label>
-                    <Label x:Name="Source"
+                           VerticalOptions="Fill">
+                    </Label>
+
+                    <Image Grid.Row="2" Grid.Column="0" Source="sourceIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="0,7,0,0" />
+                    <Label Grid.Row="2" Grid.Column="1" Style="{StaticResource LableStyle}" Text="Kaynak" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" Margin="0,7,0,0">
+                        <Label.Effects>
+                            <controls:ShadowEffect Radius="5" DistanceX="5" DistanceY="5" Color="Black">
+                            </controls:ShadowEffect>
+                        </Label.Effects>
+                    </Label>
+                    <Label Grid.Row="2" Grid.Column="2"
                            Text="{Binding Task.Scenario.Source}"
                            HorizontalTextAlignment="Center"
                            VerticalTextAlignment="Center"
                            FontSize="Medium"
+                           Margin="0,7,0,0"
+                           TextColor="Black"
                            HorizontalOptions="FillAndExpand"
-                           VerticalOptions="Center" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image
-                            Source="locationIcon.png"
-							VerticalOptions="Center"
-							HorizontalOptions="Center"
-                            Margin="0,3,0,0" />
-                    <Label Style="{StaticResource LableStyle}" Text="Lokasyon" Margin="0, 0, 13, 0"></Label>
-                    <Label x:Name="LocationArea"
+                           VerticalOptions="Fill">
+                    </Label>
+
+                    <Image Grid.Row="3" Grid.Column="0" Source="locationIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="0,7,0,0" />
+                    <Label Grid.Row="3" Grid.Column="1" Style="{StaticResource LableStyle}" Text="Lokasyon" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" Margin="0,7,0,0">
+                        <Label.Effects>
+                            <controls:ShadowEffect Radius="5" DistanceX="5" DistanceY="5" Color="Black">
+                            </controls:ShadowEffect>
+                        </Label.Effects>
+                    </Label>
+                    <Label Grid.Row="3" Grid.Column="2"
                            Text="{Binding Task.Scenario.Site}"
                            HorizontalTextAlignment="Center"
                            FontSize="Medium"
+                           Margin="0,7,0,0"
+                           TextColor="Black"
                            VerticalTextAlignment="Center"
                            HorizontalOptions="FillAndExpand"
-                           VerticalOptions="Center" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Image
-                            Source="impactAreaIcon.png"
-							VerticalOptions="Center"
-							HorizontalOptions="Center"
-                            Margin="0,3,0,0" />
-                    <Label Style="{StaticResource LableStyle}" Text="Etki Alanı" Margin="0, 0, 13, 0"></Label>
-                    <Label x:Name="ImpactArea"
+                           VerticalOptions="Fill">
+                    </Label>
+
+                    <Image Grid.Row="4" Grid.Column="0" Source="impactAreaIcon.png" VerticalOptions="CenterAndExpand" HorizontalOptions="EndAndExpand" Margin="0,7,0,0" />
+                    <Label Grid.Row="4" Grid.Column="1" Style="{StaticResource LableStyle}" Text="Etki Alanı" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" Margin="0,7,0,0">
+                        <Label.Effects>
+                            <controls:ShadowEffect Radius="5" DistanceX="5" DistanceY="5" Color="Black">
+                            </controls:ShadowEffect>
+                        </Label.Effects>
+                    </Label>
+                    <Label Grid.Row="4" Grid.Column="2"
                            Text="{Binding Task.Scenario.ImpactArea}"
                            HorizontalTextAlignment="Center"
                            VerticalTextAlignment="Center"
                            FontSize="Medium"
+                           Margin="0,7,0,0"
+                           TextColor="Black"
                            HorizontalOptions="FillAndExpand"
-                           VerticalOptions="Center" />
-                </StackLayout>
-                <Editor x:Name="DescriptionEditor" FontSize="Medium" BindingContext="{Binding Description}"  AutoSize="TextChanges" Placeholder="Açıklama"  TextColor="Black" />
-                <Button x:Name="NewNotificationButton"
-                            Text="Fotoğraf göster"
-                            IsVisible="{Binding IsPictureButtonVisible}"
-                            Command="{Binding ShowPictureButton}"
-                            HorizontalOptions="FillAndExpand"
-                            BackgroundColor="#E61E28"
-                            CornerRadius="50"
-                            FontSize="Medium"
-                            TextColor="White"
-                            BorderColor="Black"
-                            FlexLayout.AlignSelf="Stretch"></Button>
-                <Image x:Name="image" Margin="85,20,85,20" WidthRequest="200" IsVisible="{Binding IsImageVisible}" Source="{Binding PictureUrl}"  BackgroundColor="White" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"></Image>
+                           VerticalOptions="Fill">
+                    </Label>
+                </Grid>
+
                 <ListView x:Name="TaskListView" ItemsSource="{Binding StatusRecords}"  ItemSelected="TaskListView_ItemSelected" HeightRequest="250">
                     <ListView.ItemTemplate>
                         <DataTemplate>
@@ -137,6 +154,6 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </StackLayout>
-        </Grid>
+        </StackLayout>
     </ScrollView>
 </ContentPage>
