--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/ScenarioTemplate.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/Templates/ScenarioTemplate.xaml
@@ -2,62 +2,42 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Intouch.Edm.Views.Templates.ScenarioTemplate">
+    <ContentView.Resources>
+        <ResourceDictionary>
+            <Style x:Key="LableStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="FontSize" Value="Default" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="HorizontalOptions" Value="Center"></Setter>
+                <Setter Property="VerticalOptions" Value="Center"></Setter>
+            </Style>
+        </ResourceDictionary>
+    </ContentView.Resources>
     <ContentView.Content>
-        <StackLayout
-		Spacing="0"
-		Orientation="Horizontal"
-		Padding="10, 5, 10, 5"
-		VerticalOptions="Center">
-            <Image Source="{Binding Icon}"
-                   Aspect="AspectFill"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Start"
-                   TranslationX="8"
-                   TranslationY="14">
+
+        <Grid ColumnSpacing="2" HorizontalOptions="FillAndExpand" VerticalOptions="Fill">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Image Grid.Row="0" Grid.Column="0" Source="{Binding Icon}" BackgroundColor="Transparent" HorizontalOptions="StartAndExpand" VerticalOptions="FillAndExpand">
             </Image>
-            <StackLayout
-			Padding="10, 0, 10, 0"
-			Spacing="0"
-			Orientation="Horizontal"
-			HorizontalOptions="FillAndExpand">
-                <StackLayout
-				HorizontalOptions="FillAndExpand"
-				Spacing="0"
-				Padding="10">
-                    <StackLayout
-					Orientation="Horizontal">
-                        <Label
-						Text="{Binding Subject}"
-                        Font="Bold,18"
-						HorizontalOptions="Fill"
-						VerticalOptions="EndAndExpand" />
-                        <Label
-						Text=" "
-						HorizontalOptions="FillAndExpand"
-						VerticalOptions="EndAndExpand" />
-                        <Label
-						Text="{Binding RecordDate}"
-						FontSize="12"
-						HorizontalTextAlignment="Center"
-						HorizontalOptions="EndAndExpand"
-						VerticalOptions="Center" />
-                    </StackLayout>
-                    <StackLayout
-					Orientation="Horizontal"
-					Padding="0,8,0,0">
-                        <Label
-                        Text="{Binding Source}"
-                        TextColor="Gray"
-                        FontAttributes="Italic"
-                        FontSize="13"
-                        HorizontalOptions="FillAndExpand"
-						VerticalOptions="FillAndExpand" />
-                        <Image VerticalOptions="EndAndExpand"
-                               Source="{Binding StatusIcon}"
-                               WidthRequest="24" />
-                    </StackLayout>
-                </StackLayout>
-            </StackLayout>
-        </StackLayout>
+            <Label Grid.Row="0" Grid.Column="1"
+                   Text="{Binding Subject}"
+                   Style="{StaticResource LableStyle}"
+                   HorizontalTextAlignment="Center"
+				   HorizontalOptions="CenterAndExpand"
+				   VerticalOptions="CenterAndExpand" />
+            <Label Grid.Row="0" Grid.Column="2"
+				   Text="{Binding RecordDate}"
+				   FontSize="12"
+				   HorizontalTextAlignment="Center"
+				   HorizontalOptions="End"
+				   VerticalOptions="Start" />
+        </Grid>
     </ContentView.Content>
 </ContentView>
