Onaylanan senaryolara basıldıgında ilgili taskların oprtionlarının gosterılmesı ıcın ekran tasarlandı.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioListPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioListPage.xaml
@@ -80,7 +80,7 @@
                               ItemTemplate="{StaticResource scenarioDataTemplateSelector}"
                               IsRefreshing="{Binding IsBusy, Mode=OneWay}"
                               CachingStrategy="RecycleElement"
-                              ItemSelected="OnItemSelected">
+                              ItemSelected="OnItemSelectedToCheckDetailOptions">
                 </ListView>
                 <ActivityIndicator
                             x:Name="ApprovedProgress"
